# aws-gatk-recipe-cdk-stack

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  app.py  package-lock.json  package.json  props.json  pyproject.toml
aws_gatk_stack/: compute_substack.py  docker_substack.py  iam_substack.py  storage_substack.py  vpc_substack.py
docker/: nextflow.aws.sh
docker_gatk/: Dockerfile
docker_gatk4110/: Dockerfile
docker_gatk_joint/: Dockerfile
docker_gotc/: Dockerfile
launch_template/: userdata_ebs.sh
